header-logo/navigation was created

--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <header>
+<div class="header">
+<a class="logo" href="index.html">
+  <img src="Images/Logo.svg" alt="Logo">
+</a>
+<div class="navigation">
+<ul>
+  <li class="nav">
+    <a href="index.html">Home</a>
+   </li>
+  <li class="nav">
+   <a href="#">About</a>
+  </li>
+  <li class="nav">
+    <a href="#">Pages</a>
+  </li>
+  <li class="nav">
+    <a href="#">Shop</a>
+  </li>
+  <li class="nav">
+    <a href="#">Projects</a>
+  </li>
+  <li class="nav">
+    <a href="#">News</a>
+  </li>
+</ul>
+</div>
+
+</div>
+
+</header>
+
 </body>
 </html>
