Styles/Main defined,

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Lesson 5</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/arial-geo/css/arial-geo.min.css">
 </head>
 <body>
   <header>
@@ -37,6 +38,72 @@
 </div>
 
 </header>
+
+<main class="main">
+  <div class="divwrapper">
+ <div class="leftdiv">
+  <div class="topdiv1">
+  <h3 class="question">Why Choose us?</h3>
+  <h1 class="market">We do not buy from the open market & traders.</h1>
+  <span class="span1">Simply dummy text of the printing and typesetting industry. Lorem had ceased to been the industry's standard  the 1500s, when an unknown</span>
+  </div>
+
+  <div class="bottomdiv1">
+  <ul>
+  <li class="block">
+    <a  class="button" href="#">100% Natural Product</a>
+    <p class="span1 text">Simply dummy text of the printing and typesetting industry Lorem Ipsum</p>
+  </li>
+ 
+  <li class="block">
+    <a class="button" href="#">Increase resistance</a>
+    <p class="span1 text">Filling, and temptingly healthy, our Biona Organic Granola with Wild Berries is just the thing</p>
+  </li>
+
+  </ul>
+  </div>
+ 
+ </div>
+
+<div class="rightdiv">
+  <img class="image" src="Images/Photo.svg" alt="picture">
+</div>
+
+  </div>
+
+
+
+
+  <div class="footer">
+
+    <div class="footerdiv">
+      <h1 class="Policy">დაბრუნების პოლისი</h1>
+      <div class="span2">
+      <span class="span1">Simply dummy text of the printintypesetting industry.</span>
+      </div>
+    </div>
+     <div class="footerdiv">
+      <h1 class="Policy">დაბრუნების პოლისი</h1>
+      <div class="span2">
+      <span class="span1">Simply dummy text of the printintypesetting industry.</span>
+      </div>
+    </div>
+    <div class="footerdiv">
+      <h1 class="Policy Ge">დაბრუნების პოლისი</h1>
+      <div class="span2">
+      <span class="span1">Simply dummy text of the printintypesetting industry.</span>
+      </div>
+    </div>
+    <div class="footerdiv">
+      <h1 class="Policy Ge">დაბრუნების პოლისი</h1>
+      <div class="span2">
+      <span class="span1">Simply dummy text of the printintypesetting industry.</span>
+      </div>
+    </div>
+
+  </div>
+
+</main>
 
 </body>
 </html>
