georgian fonts- local/absolute adr.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>Lesson 5</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/arial-geo/css/arial-geo.min.css">
+  <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/alk-life/css/alk-life.min.css">
+  <link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
   <header>
@@ -79,25 +80,25 @@
     <div class="footerdiv">
       <h1 class="Policy">დაბრუნების პოლისი</h1>
       <div class="span2">
-      <span class="span1">Simply dummy text of the printintypesetting industry.</span>
+      <span class="span1">დაბრუნების პოლისის ტექსტი</span>
       </div>
     </div>
      <div class="footerdiv">
       <h1 class="Policy">დაბრუნების პოლისი</h1>
       <div class="span2">
-      <span class="span1">Simply dummy text of the printintypesetting industry.</span>
+      <span class="span1">დაბრუნების პოლისის ტექსტი</span>
       </div>
     </div>
     <div class="footerdiv">
       <h1 class="Policy Ge">დაბრუნების პოლისი</h1>
       <div class="span2">
-      <span class="span1">Simply dummy text of the printintypesetting industry.</span>
+      <span class="span1">დაბრუნების პოლისის ტექსტი</span>
       </div>
     </div>
     <div class="footerdiv">
       <h1 class="Policy Ge">დაბრუნების პოლისი</h1>
       <div class="span2">
-      <span class="span1">Simply dummy text of the printintypesetting industry.</span>
+      <span class="span1">დაბრუნების პოლისის ტექსტი</span>
       </div>
     </div>
 
