--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/alk-life/css/alk-life.min.css">
   <link rel="stylesheet" href="css/fonts.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
   <header>
